<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">ACGPanel</string>

    <string name="welcomeText">Kosketa ruutua aloittaaksesi ›</string>
    <string name="arrowDown">Nuoli alas</string>
    <string name="showIdCard">Näytä ID-kortti</string>
    <string name="logo">Etra logo</string>
    <string name="userGreeting">Tervetuloa\n%1$s</string>
    <string name="menu">Valikko</string>
    <string name="profileName">Matti Meikäläinen</string>
    <string name="ok">OK</string>
    <string name="cancel">Peruuta</string>
    <string name="unlockCode">Syötä huoltokoodi</string>
    <string name="browse_products">Valitse tuotteet</string>
    <string name="orders">Tilaukset</string>
    <string name="support">Apu 24/7</string>
    <string name="layout">Kartta</string>
    <string name="notImplemented">Toimintoa ei ole vielä toteutettu</string>
    <string name="profile">Profiili</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="profile_name">Nimi</string>
    <string name="profile_card_code">Korttikoodi</string>
    <string name="browse_products_without_login">Selaa tuotteita kirjautumatta</string>
    <string name="accept_vend">Hyväksy otto</string>
    <string name="num_products">%1$d tuotetta</string>
    <string name="basket_product_title">%1$s (%2$d kpl)</string>
    <string name="basket_product_details">kustannuspaikka: %1$s, lisäviite: %2$s</string>
    <string name="vend">Otto</string>
    <string name="select_another">Ota lisää</string>
    <string name="basket_item_placeholder">\???</string>
    <string name="notifications_name">ACGPanel notifications</string>
    <string name="mcu_communication_title">MCU COMMUNICATION</string>
    <string name="mcu_communication_desc">Mcu communication running in background</string>
    <string name="server_sync_title">SERVER SYNC</string>
    <string name="server_sync_desc">Server synchronization running in background</string>
    <string name="title_activity_acg_panel_settings">ACGPanel asetukset</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Yleiset</string>

    <string name="pref_key_vending_machine_id">vending_machine_id</string>
    <string name="pref_title_vending_machine_id">Automaatin tunnus</string>
    <string name="pref_default_vending_machine_id">0</string>
    <string name="pref_default_password" />
    <string name="pref_key_password">password</string>
    <string name="pref_title_password">Salasana</string>
    <string name="input_count">Anna määrä</string>
    <string name="expenditure">Kustannuspaikka</string>
    <string name="reference">Lisäviite</string>
    <string name="pick_up_products">Nouda tuotteet, ole hyvä</string>
    <string name="complete_by_closing_door">Otto päättyy, kun suljet luukut</string>
    <string name="modify_checkout">Muokkaa ottoa</string>
    <string name="edit">Muokkaa</string>
    <string name="product">Tuote</string>
    <string name="default_unit">kpl</string>

</resources>
