<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_white"
        android:layout_margin="30dp"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:onClick="browseProducts"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:text="@string/browse_products"
        android:textAllCaps="false"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="50dp"
        android:background="@color/lightBackground"
        android:layout_gravity="center"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="110dp"
        />

    <Button
        android:onClick="notImplemented"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:text="@string/orders"
        android:textAllCaps="false"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="50dp"
        android:background="@color/lightBackground"
        android:layout_gravity="center"
        android:layout_marginLeft="210dp"
        android:layout_marginBottom="110dp"
        />

    <Button
        android:onClick="notImplemented"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:text="@string/support"
        android:textAllCaps="false"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="50dp"
        android:background="@color/lightBackground"
        android:layout_gravity="center"
        android:layout_marginRight="210dp"
        android:layout_marginTop="110dp"
        />

    <Button
        android:onClick="notImplemented"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:text="@string/layout"
        android:textAllCaps="false"
        android:textSize="40dp"
        android:textStyle="bold"
        android:padding="50dp"
        android:background="@color/lightBackground"
        android:layout_gravity="center"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="110dp"
        />

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        />

</FrameLayout>
